[package]
name = "cniguru"
version = "0.2.0"
authors = ["Maximilian Hristache <mhristache@gmail.com>"]
build = "build.rs"
description = """
Troubleshooting tool for docker and kubernetes networking
"""
repository = "https://github.com/maximih/cniguru"
homepage = "https://github.com/maximih/cniguru"
documentation = "https://docs.rs/cniguru"
readme = "README.md"
keywords = ["cni", "docker", "kubernetes", "cloud-native"]
categories = ["command-line-utilities"]
license = "Apache-2.0/MIT"

[build-dependencies]
vergen = "0.1.0"

[workspace]
members = ["cniguru-daemon"]


[dependencies]
docopt = "1.0"
log = "0.4"
env_logger = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
failure = "0.1"
kubeclient = "0.1"
url = "1.7"
regex = "1.0"
lazy_static = "1.0"
tabwriter = "1.0"
