[package]
name = "cniguru"
version = "0.3.0"
authors = ["Maximilian Hristache <mhristache@gmail.com>"]
description = """
Troubleshooting tool for docker and kubernetes networking
"""
repository = "https://github.com/maximih/cniguru"
homepage = "https://github.com/maximih/cniguru"
documentation = "https://docs.rs/cniguru"
readme = "README.md"
keywords = ["cni", "docker", "kubernetes", "cloud-native"]
categories = ["command-line-utilities"]
license = "Apache-2.0/MIT"
edition = "2018"

[dependencies]
docopt = "1.1"
log = "0.4"
env_logger = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1.0"
url = "2.2"
regex = "1.5"
lazy_static = "1.4"
kube = "0.55.0"
kube-runtime = "0.55.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
tokio = { version = "1", features = ["full"] }
netns = {git = "https://github.com/mhristache/netns"}
rtnetlink = "0.7.0"
futures = "0.3.0"
container-pid = "0.1.0"
sys-mount = "1.2.1"